--- a/Chip_Inventory_System/App.config
+++ b/Chip_Inventory_System/App.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+	</startup>
+
+	<connectionStrings>
+		<add name="SqlConnectionString" connectionString="Server=Ascilion006;Database=Chip_Inventory_Database;Integrated Security=True;" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
